# corrective_self_reflective_rag

./: .dockerignore  .ebignore  .gitignore  AWS_Deployment.md  AWS_Deployment_Architecture.md  Dockerfile  Dockerrun.aws.json  deployment.md  github_secrets_automation.sh  pyproject.toml
.ebextensions/: nginx-timeout.config  single-instance.config  storage.config
.elasticbeanstalk/: config.yml
.github/workflows/: deploy.yml
.plateform/nginx/conf.d/: timeout.conf
app/api/: query.py
