[project]
name = "crag-reflective-rag"
version = "1.0.0"
description = "Self-reflective Retrieval Augmented Generation"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.8"
dependencies = [
    "openai",
    "aiohttp",
    "python-dotenv",
    "qdrant-client",
    "chromadb",
    "pypdf",
    "python-pptx",
    "psycopg[binary]",
    "langchain>=0.1.16",
    "langchain-community>=0.0.34",
    "langchain-openai>=0.0.8"
]

[project.optional-dependencies]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.19.0",
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "bpython>=0.24",
    "setuptools>=69.0.3"
]
docs = []
test = []
lint = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.dependency-groups]
dev = ["dev"]
docs = ["docs"]
test = ["test"]
lint = ["lint"]